CallActivity parallel & sequential multiinstance